--- a/src/chrome/locale/de-DE/gmanager.dtd
+++ b/src/chrome/locale/de-DE/gmanager.dtd
@@ -1,4 +1,4 @@
-<!ENTITY ext-name "Google Mail Manager">
+<!ENTITY ext-name "Gmail Manager-community">
 <!ENTITY ext-description "Umfangreiche Funktionen für Google Mail Konten">
 <!ENTITY common-alias "Bezeichnung">
 <!ENTITY common-email "E-Mail-Adresse">
