--- a/src/chrome/locale/es-CL/gmanager.dtd
+++ b/src/chrome/locale/es-CL/gmanager.dtd
@@ -1,4 +1,4 @@
-<!ENTITY ext-name "Administrador de Gmail">
+<!ENTITY ext-name "Gmail Manager-community">
 <!ENTITY ext-description "Administra multiples cuentas de Gmail y recibe notificaciones de nuevo correo">
 <!ENTITY common-alias "Alias">
 <!ENTITY common-email "Correo">
