--- a/src/chrome/locale/fa-IR/gmanager.dtd
+++ b/src/chrome/locale/fa-IR/gmanager.dtd
@@ -1,4 +1,4 @@
-<!ENTITY ext-name "مدیر جی‌میل">
+<!ENTITY ext-name "Gmail Manager-community">
 <!ENTITY ext-description "مدیریت حساب‌های جی‌میل و اعلان نامه‌های جدید">
 <!ENTITY common-alias "نام مستعار">
 <!ENTITY common-email "پست الکترونیکی">
