--- a/src/chrome/locale/ko-KR/gmanager.dtd
+++ b/src/chrome/locale/ko-KR/gmanager.dtd
@@ -1,4 +1,4 @@
-<!ENTITY ext-name "Gmail 관리자">
+<!ENTITY ext-name "Gmail Manager-community">
 <!ENTITY ext-description "Gmail 계정을 관리하고 새로 온 메일을 알려줍니다.">
 <!ENTITY common-alias "별명">
 <!ENTITY common-email "이메일">
