--- a/src/chrome/locale/lt-LT/gmanager.dtd
+++ b/src/chrome/locale/lt-LT/gmanager.dtd
@@ -1,4 +1,4 @@
-<!ENTITY ext-name "Gmail vadovas">
+<!ENTITY ext-name "Gmail Manager-community">
 <!ENTITY ext-description "Valdyk kelias Gmail paskyras ir gauk naujų laiškų pranešimus.">
 <!ENTITY common-alias "Slapyvardis">
 <!ENTITY common-email "El. pašto adresas">
