--- a/src/chrome/locale/pl-PL/gmanager.dtd
+++ b/src/chrome/locale/pl-PL/gmanager.dtd
@@ -1,4 +1,4 @@
-<!ENTITY ext-name "Menedżer poczty Gmail">
+<!ENTITY ext-name "Gmail Manager-community">
 <!ENTITY ext-description "Menedżer poczty Gmail i powiadamianie o nowej poczcie.">
 <!ENTITY common-alias "Alias">
 <!ENTITY common-email "E-mail">
