--- a/src/chrome/locale/sl-SI/gmanager.dtd
+++ b/src/chrome/locale/sl-SI/gmanager.dtd
@@ -1,4 +1,4 @@
-<!ENTITY ext-name "Upravitelj Gmail">
+<!ENTITY ext-name "Gmail Manager-community">
 <!ENTITY ext-description "Upravljanje z računi Gmail in obveščanje o novi pošti.">
 <!ENTITY common-alias "Vzdevek">
 <!ENTITY common-email "E-poštni naslov">
