--- a/src/chrome/locale/sr-RS/gmanager.dtd
+++ b/src/chrome/locale/sr-RS/gmanager.dtd
@@ -1,4 +1,4 @@
-<!ENTITY ext-name "Гмаил Менаџер">
+<!ENTITY ext-name "Gmail Manager-community">
 <!ENTITY ext-description "Менаџмент Гмаил налога и обавештавање о новим порукама.">
 <!ENTITY common-alias "Алиас">
 <!ENTITY common-email "Емаил">
