--- a/src/chrome/locale/es-AR/gmanager.dtd
+++ b/src/chrome/locale/es-AR/gmanager.dtd
@@ -1,4 +1,4 @@
-<!ENTITY ext-name "Administrador Gmail">
+<!ENTITY ext-name "Gmail Manager-community">
 <!ENTITY ext-description "Gestión de cuentas Gmail y nuevas notificaciones de correos.">
 <!ENTITY common-alias "Alias">
 <!ENTITY common-email "Cuenta de correo">
