--- a/src/chrome/locale/zh-CN/gmanager.dtd
+++ b/src/chrome/locale/zh-CN/gmanager.dtd
@@ -80,7 +80,7 @@
 <!ENTITY options-toolbar-compose-message "撰写新邮件">
 <!ENTITY options-toolbar-reset-unread-count "开启账户时重置未读邮件数量">
 <!ENTITY options-help-release-manager "Release Manager:">
-<!ENTITY options-help-based-on "Based On:">
+<!ENTITY options-help-based-on "Based on:">
 <!ENTITY options-help-join-community "Join the Community">
 <!ENTITY options-help-join-community-message "Gmail Manager NG is intended to be a community driven project. Getting started is as simple as creating a fork of the repository on GitHub.com. Gmail Manager NG is developed and distributed under the same license as the original Gmail Manager.">
 <!ENTITY options-help-translate-message "Interested in translating? Create your own GitHub fork of the repository and look for the files under src/chrome/locale. If you're not a developer, you can create an issue and add the contents of your gmanager.dtd and gmanager.properties files.">
