--- a/src/chrome/locale/ko-KR/gmanager.dtd
+++ b/src/chrome/locale/ko-KR/gmanager.dtd
@@ -80,6 +80,7 @@
 <!ENTITY options-toolbar-compose-message "새 메일 쓰기">
 <!ENTITY options-toolbar-reset-unread-count "계정을 열면 안 읽은 메일수를 초기화하기">
 <!ENTITY options-help-release-manager "Release Manager:">
+<!ENTITY options-help-forked-from "Forked from:">
 <!ENTITY options-help-based-on "Based on:">
 <!ENTITY options-help-join-community "Join the Community">
 <!ENTITY options-help-join-community-message "Gmail Manager-community is intended to be a community driven project. Getting started is as simple as creating a fork of the repository on GitHub.com. Gmail Manager-community is developed and distributed under the same license as the original Gmail Manager/Gmail Manager NG.">
