--- a/src/chrome/locale/pl-PL/gmanager.dtd
+++ b/src/chrome/locale/pl-PL/gmanager.dtd
@@ -80,6 +80,7 @@
 <!ENTITY options-toolbar-compose-message "Utwórz nową wiadomość">
 <!ENTITY options-toolbar-reset-unread-count "Wyzeruj ilość nieprzeczytanych wiadomości po otworzeniu konta">
 <!ENTITY options-help-release-manager "Release Manager:">
+<!ENTITY options-help-forked-from "Forked from:">
 <!ENTITY options-help-based-on "Based on:">
 <!ENTITY options-help-join-community "Join the Community">
 <!ENTITY options-help-join-community-message "Gmail Manager-community is intended to be a community driven project. Getting started is as simple as creating a fork of the repository on GitHub.com. Gmail Manager-community is developed and distributed under the same license as the original Gmail Manager/Gmail Manager NG.">
