--- a/chrome/locale/de-DE/gmanager.dtd
+++ b/chrome/locale/de-DE/gmanager.dtd
@@ -79,16 +79,16 @@
 <!ENTITY options-toolbar-check-messages "Auf neue Nachrichten überprüfen">
 <!ENTITY options-toolbar-compose-message "Neue Nachricht verfassen">
 <!ENTITY options-toolbar-reset-unread-count "Beim Öffnen des Kontos den Zähler für ungelesene Nachrichten zurücksetzen.">
-<!ENTITY options-help-release-manager "Release Manager:">
-<!ENTITY options-help-forked-from "Forked from:">
-<!ENTITY options-help-based-on "Based on:">
-<!ENTITY options-help-join-community "Join the Community">
-<!ENTITY options-help-join-community-message "Gmail Manager-community is intended to be a community driven project. Getting started is as simple as creating a fork of the repository on GitHub.com. Gmail Manager-community is developed and distributed under the same license as the original Gmail Manager/Gmail Manager NG.">
-<!ENTITY options-help-translate-message "Interested in translating? Create your own GitHub fork of the repository and look for the files under locale/. If you're not a developer, you can create an issue and add the contents of your gmanager.dtd and gmanager.properties files.">
-<!ENTITY options-help-issues "Bug Support and Features">
-<!ENTITY options-help-issues-message "Found a bug or have a cool idea for a new feature? Open an issue in the issue tracker at GitHub.com.">
-<!ENTITY options-help-supporters "Thanks to the Supporters of Gmail Manager">
-<!ENTITY options-help-supporters-message "The following people donated to the original project. They deserve a special thanks for helping to make Gmail Manager a fantastic add on.">
+<!ENTITY options-help-release-manager "Entwicklungsmanager:">
+<!ENTITY options-help-forked-from "Abgespalten von:">
+<!ENTITY options-help-based-on "Basiert auf:">
+<!ENTITY options-help-join-community "Der Gemeinschaft beitreten">
+<!ENTITY options-help-join-community-message "Gmail Manager-community ist ein Gemeinschaft-Projekt. Mitmachen ist einfach. Bei Github.com Ihren eigenen Fork von den Quelldateien erstellen. Gmail Manager-community wird unter den selben Lizenzen entwickelt und verteilt, wie die ursprüngliche Gmail Manager/Gmail Manager NG  Erweiterung.">
+<!ENTITY options-help-translate-message "Übersetzung anbieten? Bei Github.com Ihren eigenen Fork von den Quelldateien erstellen. Schauen Sie sich die Dateien bei locale/ an. Kein Entwickler, dann auf Github neues Thema erstellen und den Inhalt der Dateien gmanager.dtd und gmanager.properties einfügen.">
+<!ENTITY options-help-issues "Fehler-Unterstützung und Funktionen">
+<!ENTITY options-help-issues-message "Fehler gefunden oder eine coole Idee für neue Funktionen? Neues Problem (issue) im Bugtracker auf GitHub.com erstellen.">
+<!ENTITY options-help-supporters "Vielen Dank an die Unterstützer von Gmail Manager">
+<!ENTITY options-help-supporters-message "Die folgenden Personen spendeten für das ursprüngliche Projekt. Ihnen gebührt besonderer Dank für die Hilfe. Nur so war es möglich Google Mail Manager zu der fantastischen Erweiterung zu machen">
 <!ENTITY options-help-author "Autor:">
 <!ENTITY options-help-website "Homepage:">
 <!ENTITY options-help-contact "Kontakt">
