--- a/chrome/locale/de-DE/gmanager.properties
+++ b/chrome/locale/de-DE/gmanager.properties
@@ -7,7 +7,7 @@ gmanager-login-valid-password=Ein gültiges Passwort angeben (Leerzeichen nicht 
 gmanager-login-email-doesnt-exist=Diese eingegebene E-Mail-Adresse existiert nicht. Möchten Sie dieses Konto hinzufügen?
 gmanager-alert-count=%S von %S
 gmanager-alert-login=Das Konto muss angemeldet sein, um Auszüge anzeigen zu können.
-gmanager-alert-snippets=The account does not have snippets to be displayed.
+gmanager-alert-snippets=Keine Auszüge zum Anzeigen vorhanden.
 gmanager-sounds-select-file=Audiodatei auswählen
 gmanager-sounds-sound-files=Audiodatei (%S)
 gmanager-options-import=Google Mail Manager - Einstellungen importieren
@@ -55,4 +55,4 @@ gmanager-toolbar-tooltip-inbox-unread=%S ungelesene %S im Posteingang.
 gmanager-toolbar-tooltip-saved-drafts=Sie haben %S archivierte %S.
 gmanager-toolbar-tooltip-spam-unread=Sie haben %S neue als Spam markierte %S.
 gmanager-toolbar-tooltip-space-used=Sie verwenden %S (%S) von Ihren %S.
-gmanager-toolbar-tooltip-important-unread=%S important unread message(s).
+gmanager-toolbar-tooltip-important-unread=%S wichtige ungelesene Nachricht(en).
